--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Beer Pro</string>
+    <string name="title_activity_home_screen">Beer Pro</string>
+    <string name="action_settings">Einstellungen</string>
+    <string name="action_logout">Abmelden</string>
 </resources>
