--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_home_screen">Beer Pro</string>
     <string name="action_settings">Einstellungen</string>
     <string name="action_logout">Abmelden</string>
+    <string name="todo">TODO</string>
 </resources>
