--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,8 @@
     <string name="action_logout">Abmelden</string>
     <string name="todo">TODO</string>
     <string name="fmt_num_ratings">(%d)</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_single_beer">SingleBeerActivity</string>
+    <string name="title_activity_rating">Beurteilung hinzufügen</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -98,4 +96,5 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="toast_unexpected_error">Unexpected error</string>
 </resources>
