--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,5 @@
     <string name="toast_unexpected_error">Unexpected error</string>
     <string name="title_activity_wishlist">Wunschliste</string>
     <string name="title_activity_myratings">Meine Bewertungen</string>
+    <string name="title_activity_mybeers">Meine Biere</string>
 </resources>
